package gollections

type Predicate[T any] func(value T) bool
